ADMIN LOGIN DONE WITH HASH AND SALT
